--- a/package.json
+++ b/package.json
@@ -9,3 +9,14 @@
   "author": "",
   "license": "ISC"
 }
+{
+  "name": "react-ecommerce",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
+}
